--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,7 @@ const navItems = [
     class="flex flex-wrap items-center justify-center mx-auto p-4 w-full fixed z-50 top-0 left-0" 
 >
     <nav class=" flex flex-wrap justify-between gap-5 w-full xl:w-[1208px]">
-        <ul class="font-medium flex justify-center p-2 md:p-0 rounded-lg md:flex-row md:space-x-8">
+        <ul class="font-medium flex justify-center p-2 md:p-0 rounded-lg md:flex-row md:space-x-8 gap-x-4 md:gap-x-0">
             <li class="flex items-center">
                 <a href="#" class="">ES</a>
             </li>
