--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -5,7 +5,7 @@ const { class: className, id } = Astro.props
 <section 
     id={id}
     data-section={id}
-    class={`section ${className} mx-auto py-16 container lg:max-w-4xl md:max-w-2xl snap-center w-full h-auto lg:py-20 `}
+    class={`section ${className} mx-auto py-16 px-3 container lg:max-w-4xl md:max-w-2xl snap-center w-full h-auto lg:py-20 lg:px-0`}
 >
     <slot/>
 </section>
