--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -24,7 +24,7 @@ const SOCIAL_ICONS: SocialIcon = {
 ---
 
 <!-- Barra de Opciones -->
-<div class="flex lg:w-3/4 border-[1px] border-white rounded-xl ">
+<div class="flex lg:w-3/4 border-[1px] dark:border-white border-slate-700 rounded-xl overflow-x-auto whitespace-nowrap">
   {
     optionsProyect.map(({ title, value }) => (
       <label class="radio flex flex-grow items-center justify-center rounded-lg p-1 cursor-pointer">
@@ -44,6 +44,7 @@ const SOCIAL_ICONS: SocialIcon = {
   }
 </div>
 
+
 <!-- Proyectos -->
 <div id="projectsContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
   {
@@ -60,12 +61,12 @@ const SOCIAL_ICONS: SocialIcon = {
           </div>
         </div>
 
-        <div class="w-full mt-3 ">
+        <div class="w-full p-4">
           <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100 ">
             {name}
           </h3>
           <span
-            class="text-xs font-normal text-white/25"
+            class="text-xs font-normal dark:text-white/25 text-gray-700 "
           >
             {category}
           </span>
@@ -76,7 +77,7 @@ const SOCIAL_ICONS: SocialIcon = {
                 return (
                   <li>
                     <span
-                      class={`flex gap-x-2 rounded-full ${bgColor} text-white text-xs py-1 px-2 `}
+                      class={`flex gap-x-2 rounded-full ${bgColor} dark:text-white text-slate-800 text-xs py-1 px-2 `}
                     >
                       <Icon class="size-4" />
                       {label}
