--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -52,7 +52,7 @@
         skills.map(({name, network, keywords})=>{
             const Icon = SOCIAL_ICONS[network];
             return(
-                <div class="flex items-center flex-col border-[1px] border-white/10 rounded drop-shadow-xl w-32 py-5">
+                <div class="flex items-center flex-col border-[1px] dark:border-white/10 rounded drop-shadow-xl w-32 py-5 border-slate-950/10 dark:bg-[rgba(17,17,17,0.9)] bg-black/15">
                     <Icon class="size-14" />
                     <h3 class="font-bold mt-5">{name}</h3>
                     <p class="flex gap-x-2 rounded-full text-xs  py-1 px-3 bg-gray-900 my-2 text-white/40">{keywords}</p>
