--- a/src/components/sections/Experiencie.astro
+++ b/src/components/sections/Experiencie.astro
@@ -27,6 +27,10 @@ import { work } from "@/cv";
                     </div>
                     <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3 text-sm ">
                         <p class="text-pretty">{summary}</p>
+
+                        <h1 class="font-bold text-lg">
+                            Principales contribuciones:
+                        </h1>
                         <ul class="list-disc mx-6">
                             {
                                 functions.map((paragraph)=>(
