--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,37 +19,37 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="relative text-black dark:text-white">
+	<body class="relative text-black dark:text-white dark:bg-[rgba(17,17,17)] bg-white">
 		<Header/>
 		<main class="snap-y snap-mandatory relative w-full h-screen lg:overflow-y-auto scroll-smooth">
 			<slot/>
 		</main>
 
+		<style is:global>
+			:root {
+				color-scheme: light dark;
+			}
+		
+			html {
+				font-family: "Onest Variable", system-ui, sans-serif;
+				scroll-behavior: smooth;
+			}
+		
+			body {
+				color: rgba(17, 17, 17, 0.9);
+				display: flex;
+				flex-direction: column;
+				min-height: 100vh;
+				overscroll-behavior: none;
+			}
+		
+			@media (prefers-reduced-motion: reduce) {
+				html {
+					scroll-behavior: auto;
+				}
+			}
+		</style>
 	</body>
 </html>
-<style is:global>
-	:root {
-        color-scheme: light dark;
-    }
-
-	html {
-		font-family: "Onest Variable", system-ui, sans-serif;
-		scroll-behavior: smooth;
-	}
-
-    body {
-        color: rgba(17, 17, 17, 0.9);
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        overscroll-behavior: none;
-    }
-
-	@media (prefers-reduced-motion: reduce) {
-		html {
-			scroll-behavior: auto;
-		}
-	}
-</style>
 
 
