--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,7 +40,10 @@ const navItems = [
                 <a href="#" class="">ES</a>
             </li>
             <li class="flex items-center">
-                <a href="#">CV</a>
+                <a 
+                    href="https://cv-jaiderqbm.vercel.app"
+                    class="hover:scale-125"
+                >CV</a>
             </li>
             <li class="flex items-center">
                 <ThemeToggle/>
